# ztlgr

./: .envrc  .gitignore  AGENTS.md  BUGFIXES.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cargo.toml.final  FIXES_REPORT.md  INSTALL.md  Makefile  QUICKSTART.md  README.md  RELEASE.md  STATUS.md  check.sh  clippy.toml  config.example.toml  flake.nix  setup.sh  shell.nix  test_fixes.sh
.direnv/: nix-profile-26.05-mwcrzj9jvaynxp7q  nix-profile-26.05-mwcrzj9jvaynxp7q.rc
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
.skills/: README.md  conventions.md
.skills/context/: domain.md  priorities.md
.skills/templates/: comparison.md  entity-page.md  index-entry.md  source-summary.md
.skills/workflows/: ingest.md  lint.md  maintain.md  query.md
docs/: HOWTO-LLM-MCP.md  ROADMAP-LLM-WIKI.md  STATUS.md
docs/archive/: CHECKPOINT.md  IMPLEMENTATION_SUMMARY.md  UX_IA_ANALYSIS_REPORT.md
src/: cli.rs  error.rs  lib.rs  main.rs  migration_v2.sql  progress.rs  schema.sql  setup.rs  storage_test.rs  utils.rs
src/agent/: mod.rs  placeholder.rs
src/config/: mod.rs  settings.rs  theme.rs
src/config/theme/: custom.rs  dracula.rs  gruvbox.rs  nord.rs  solarized.rs
src/db/: mod.rs  schema.rs
src/graph/: layout.rs  mod.rs  types.rs
src/link/: fuzzy.rs  mod.rs  parser.rs  validator.rs
src/llm/: anthropic.rs  context.rs  gemini.rs  mod.rs  nvidia.rs  ollama.rs  openai.rs  openrouter.rs  post_processor.rs  provider.rs  usage.rs  workflow.rs
src/llm/workflows/: ingest.rs  lint.rs  mod.rs  query.rs
src/mcp/: mod.rs  server.rs  tools.rs
src/note/: metadata.rs  mod.rs  note_types.rs  types.rs  utils.rs  zettel.rs
src/skill/: mod.rs  placeholder.rs
src/skills/: generator.rs  mod.rs
src/source/: convert.rs  ingest.rs  mod.rs
src/storage/: README.md  activity_log.rs  importer.rs  index_generator.rs  markdown.rs  mod.rs  org.rs  organization.rs  sync.rs  watcher.rs
src/ui/: app.rs  link_following.rs  mod.rs  navigation_history.rs
tests/integration/: mouse_events.rs  note_operations.rs  terminal_recovery.rs
(+19 files in other folders)
