[package]
name = "ztlgr"
version = "0.6.0"
edition = "2021"
authors = ["ZettelGraph Team"]
description = "Terminal-based note-taking app with Zettelkasten methodology"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bakudas/ztlgr"
keywords = ["notes", "zettelkasten", "terminal", "tui"]
categories = ["command-line-interface", "text-processing"]
default-run = "ztlgr"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Database
rusqlite = { version = "0.30", features = ["bundled"] }

# Serde
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# TUI
ratatui = "0.26"
crossterm = "0.29"
tui-textarea = "0.5"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Markdown parsing
pulldown-cmark = "0.13"

# Hashing
sha2 = "0.10"

# HTTP client (LLM providers)
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Regex
regex = "1.10"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Configuration
directories = "5.0"
toml = "0.8"

# Async utilities
parking_lot = "0.12"
futures = "0.3"

# File watching
notify = "6.1"
crossbeam-channel = "0.5"

# File system
walkdir = "2.4"
sanitize-filename = "0.5"
unicode-width = "0.1"

# Document conversion for LLM ingestion
anytomd = "1.2"           # DOCX, PPTX, XLSX, HTML, CSV, JSON, XML -> Markdown
pdf-extract = "0.10"      # PDF -> Text
epub = "2.1"              # EPUB parsing

# Progress indicators
indicatif = "0.17"

# CLI
clap = { version = "4.4", features = ["derive", "env"] }
shellexpand = "3.1"

[dev-dependencies]
tempfile = "3.9"
criterion = "0.5"

[[bin]]
name = "ztlgr"
path = "src/main.rs"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
opt-level = 3

[profile.dev]
opt-level = 0
debug = true